--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,30 +8,11 @@
   <title>Forms / Elements - NiceAdmin Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link th:href="@{/img/favicon.png}" rel="icon">
-  <link th:href="@{/img/apple-touch-icon.png}" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-  <link th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
-  <link th:href="@{/vendor/boxicons/css/boxicons.min.css}" rel="stylesheet">
-  <link th:href="@{/vendor/quill/quill.snow.css}" rel="stylesheet">
-  <link th:href="@{/vendor/quill/quill.bubble.css}" rel="stylesheet">
-  <link th:href="@{/vendor/remixicon/remixicon.css}" rel="stylesheet">
-  <link th:href="@{/vendor/simple-datatables/style.css}" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 
 <body>
-
+  <div th:replace="~{links}"></div>
+  <div th:replace="~{scripts}"></div>
   <div th:replace="~{topbar}"></div>
   <div th:replace="~{sidebar}"></div>
 
@@ -47,9 +28,36 @@
               <!-- General Form Elements -->
               <form>
                 <div class="row mb-3">
-                  <label for="inputText" class="col-sm-2 col-form-label">Text</label>
+                  <label class="col-sm-2 col-form-label">Username</label>
                   <div class="col-sm-10">
-                    <input type="text" class="form-control">
+                    <div class="input-group mb-3">
+                      <span class="input-group-text" id="basic-addon1">@</span>
+                      <input type="text"
+                             class="form-control"
+                             placeholder="Username"
+                             aria-label="Username"
+                             aria-describedby="basic-addon1">
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="firstNameInput"
+                         class="col-sm-2 col-form-label">First Name</label>
+                  <div class="col-sm-10">
+                    <input id ="firstNameInput"
+                           type="text"
+                           class="form-control">
+                  </div>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="lastNameInput"
+                         class="col-sm-2 col-form-label">Last Name</label>
+                  <div class="col-sm-10">
+                    <input id ="lastNameInput"
+                           type="text"
+                           class="form-control">
                   </div>
                 </div>
                 <div class="row mb-3">
@@ -76,10 +84,25 @@
                     <input class="form-control" type="file" id="formFile">
                   </div>
                 </div>
+                <!-- Birth Date-->
                 <div class="row mb-3">
-                  <label for="inputDate" class="col-sm-2 col-form-label">Date</label>
+                  <label for="birthDate"
+                         class="col-sm-2 col-form-label">Date of Birth</label>
                   <div class="col-sm-10">
-                    <input type="date" class="form-control">
+                    <input type="date"
+                           id="birthDate"
+                           class="form-control">
+                  </div>
+                </div>
+
+                <!-- Joining Date-->
+                <div class="row mb-3">
+                  <label for="joiningDate"
+                         class="col-sm-2 col-form-label">Joining Date</label>
+                  <div class="col-sm-10">
+                    <input type="date"
+                           id="joiningDate"
+                           class="form-control">
                   </div>
                 </div>
                 <div class="row mb-3">
@@ -102,25 +125,19 @@
                   </div>
                 </div>
                 <fieldset class="row mb-3">
-                  <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+                  <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
                   <div class="col-sm-10">
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                      <label class="form-check-label" for="gridRadios1">
-                        First radio
-                      </label>
-                    </div>
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                      <label class="form-check-label" for="gridRadios2">
-                        Second radio
-                      </label>
-                    </div>
-                    <div class="form-check disabled">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios" value="option" disabled>
-                      <label class="form-check-label" for="gridRadios3">
-                        Third disabled radio
-                      </label>
+                    <div th:each = "gender: ${genderList}">
+                      <div class="form-check">
+                        <input class="form-check-input"
+                               th:name="gender"
+                               type="radio"
+                               th:value= "${gender}">
+                        <label class="form-check-label"
+                               th:text = "${gender}">
+
+                        </label>
+                      </div>
                     </div>
                   </div>
                 </fieldset>
@@ -153,14 +170,26 @@
                 </div>
 
                 <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Select</label>
+                  <label class="col-sm-2 col-form-label">Salary Currency</label>
                   <div class="col-sm-10">
                     <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+                      <option selected>Please Select</option>
+                      <div th:each="currency: ${currencyList}">
+                        <option th:value="${currency}" th:text="${currency}"></option>
+                      </div>
                     </select>
+                  </div>
+                </div>
+
+                <!--Salary-->
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">Salary</label>
+                  <div class="col-sm-10">
+                    <div class="input-group mb-3">
+                      <span class="input-group-text">৳</span>
+                      <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                      <span class="input-group-text">.00</span>
+                    </div>
                   </div>
                 </div>
 
@@ -284,11 +313,6 @@
                       <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
                     </div>
 
-                    <div class="input-group mb-3">
-                      <span class="input-group-text">$</span>
-                      <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-                      <span class="input-group-text">.00</span>
-                    </div>
 
                     <div class="input-group mb-3">
                       <input type="text" class="form-control" placeholder="Username" aria-label="Username">
@@ -316,20 +340,10 @@
 
   <div th:replace="~{footer}"></div>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
 
-  <!-- Vendor JS Files -->
-  <script th:src="@{/vendor/apexcharts/apexcharts.min.js}"></script>
-  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-  <script th:src="@{/vendor/chart.js/chart.umd.js}"></script>
-  <script th:src="@{/vendor/echarts/echarts.min.js}"></script>
-  <script th:src="@{/vendor/quill/quill.js}"></script>
-  <script th:src="@{/vendor/simple-datatables/simple-datatables.js}"></script>
-  <script th:src="@{/vendor/tinymce/tinymce.min.js}"></script>
-  <script th:src="@{/vendor/php-email-form/validate.js}"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
 
 </body>
 
