--- a/src/main/resources/templates/topbar.html
+++ b/src/main/resources/templates/topbar.html
@@ -4,7 +4,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
             <img th:src="@{/img/logo.png}" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+            <span class="d-none d-lg-block">Maks</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
