--- a/src/main/resources/templates/designation.html
+++ b/src/main/resources/templates/designation.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Forms / Elements - NiceAdmin Bootstrap Template</title>
+  <title th:text="#{label.designation.page.title}"/>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -20,9 +19,11 @@
 <main id="main" class="main">
   <section class="section">
     <div class="row">
-      <div class="card">
+      <div class="col-lg-6">
+        <div class="card">
           <div class="card-body">
             <h5 class="card-title">Add Designation Information</h5>
+
             <form action="#" th:action="@{/designation}" th:object="${designation}" method="post">
                 <div class="row">
                    <div class="col-sm-10">
@@ -36,11 +37,14 @@
                       <div class="form-floating mb-3">
                         <textarea class="form-control"
                                   id="description"
-                                  placeholder="Leave a comment here"
+                                  placeholder="Insert Job Description"
                                   style="height: 100px;"
                                   th:field="*{jobDescription}">
 
                         </textarea>
+                          <span th:if="${#fields.hasErrors('jobDescription')}"
+                                th:errors="*{jobDescription}"
+                                class="error"></span>
                         <label for="description">Job Description</label>
                       </div>
 
@@ -72,13 +76,38 @@
 
           </div>
         </div>
+      </div>
+      <div class="col-lg-6">
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title" th:text="#{label.designation}"></h5>
+
+                  <table class="table table-hover table-striped">
+                      <thead>
+                      <tr>
+                          <th scope="col" th:text="#{label.numbers}"></th>
+                          <th scope="col" th:text="#{label.title}"></th>
+                          <th scope="col" th:text="#{label.job.description}"></th>
+                          <th scope="col" th:text="#{label.salary.range}"></th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr th:each="des, iterStat: ${designationList}">
+                          <th scope="row" th:text="${iterStat.index + 1}"></th>
+                          <td th:text="${des.title}"></td>
+                          <td th:text="${des.jobDescription}"></td>
+                          <td th:text="${des.salaryRange}"></td>
+                      </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
     </div>
   </section>
-</main><!-- End #main -->
+</main>
 
 <div th:replace="~{footer}"></div>
-
-
 
 <a href="#"
    class="back-to-top d-flex align-items-center justify-content-center">
