--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -253,6 +253,11 @@ h6 {
   padding: 0 20px 20px 20px;
 }
 
+.register-card-body {
+  padding: 0 20px 20px 20px;
+  margin: 0 20px 20px 20px;
+}
+
 .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.6);
 }
