--- a/src/main/resources/templates/designation.html
+++ b/src/main/resources/templates/designation.html
@@ -24,11 +24,15 @@
           <div class="card-body">
             <h5 class="card-title">Add Designation Information</h5>
 
-            <form action="#" th:action="@{/designation}" th:object="${designation}" method="post">
+            <form action="#"
+                  th:action="@{/designation}"
+                  th:object="${designation}"
+                  method="post">
                 <div class="row">
                    <div class="col-sm-10">
                       <div class="form-floating mb-3">
-                          <input class="form-control" id="title" th:field="*{title}"/>
+                          <input class="form-control" id="title"
+                                 th:field="*{title}"/>
                           <span th:if="${#fields.hasErrors('title')}"
                                 th:errors="*{title}"
                                 class="error"></span>
