--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
             <div class="register-card-body">
               <h5 class="card-title">General Information</h5>
 
-              <form th:action="@{/register}"
+              <form th:action="@{/addUser}"
                     th:object="${newUser}"
                     method="post">
                 <div class="row mb-3">
@@ -61,7 +61,7 @@
                     <input id ="lastNameInput"
                            type="text"
                            class="form-control"
-                           th:field="*{lastName}">
+                           th:field="*{lastName}" required>
                   </div>
                 </div>
                 <div class="row mb-3">
@@ -85,7 +85,8 @@
                   <div class="col-sm-10">
                     <input class="form-control"
                            type="file"
-                           id="formFile">
+                           id="formFile"
+                           th:name="file">
                   </div>
                 </div>
                 <!-- Birth Date-->
@@ -96,7 +97,7 @@
                     <input type="date"
                            id="birthDate"
                            class="form-control"
-                           th:field="*{birthDate}">
+                           th:name="birthDate">
                   </div>
                 </div>
 
@@ -108,8 +109,7 @@
                     <input type="date"
                            id="joiningDate"
                            class="form-control"
-                           th:field="*{joiningDate}"
-                    >
+                           th:name="joiningDate">
                   </div>
                 </div>
                 <!-- Gender -->
@@ -120,7 +120,6 @@
                       <div class="form-check">
                         <input class="form-check-input"
                                th:name="gender"
-                               th:field="*{gender}"
                                type="radio"
                                th:value= "${gender}">
                         <label class="form-check-label"
@@ -140,7 +139,7 @@
                       <option selected>Please Select</option>
                       <div th:each="religion: ${religionList}">
                         <option th:value="${religion}"
-                                th:field="*{religion}"
+                                th:name="religionTitle"
                                 th:text="${religion}"></option>
                       </div>
                     </select>
@@ -186,7 +185,7 @@
                       <div th:each="designation: ${designationList}">
                         <option th:value="${designation}"
                                 th:text="${designation.title}"
-                                th:field="*{designation}"></option>
+                                th:name="designationTitle"></option>
                       </div>
                     </select>
                   </div>
@@ -282,14 +281,13 @@
                   <div class="row mb-3">
                     <div class="form-check">
                       <label class="form-check-label"
-                             for="flexCheckDefault">
+                             for="sameAddressCheckBox">
                         Same as above
                       </label>
                       <input class="form-check-input"
                              type="checkbox"
                              value=""
-                             id="flexCheckDefault">
-
+                             id="sameAddressCheckBox">
                     </div>
                   </div>
 
@@ -392,7 +390,7 @@
                       <option selected>Please Select</option>
                       <div th:each="relationship: ${relationshipList}">
                         <option th:value="${relationship}"
-                                th:field="*{emergencyContact.relation}"
+                                th:name="relationshipTitle"
                                 th:text="${relationship}"></option>
                       </div>
                     </select>
@@ -421,6 +419,7 @@
     <i class="bi bi-arrow-up-short"></i>
   </a>
   <div th:replace="~{scripts}"></div>
+  <script th:src="@{/js/AddressResolver.js}"></script>
 
 </body>
 
