--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -227,6 +227,13 @@ h6 {
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
 }
 
+.list-card {
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+}
+
 .card-header,
 .card-footer {
   border-color: #ebeef4;
@@ -251,6 +258,13 @@ h6 {
 
 .card-body {
   padding: 0 20px 20px 20px;
+}
+
+.icon-style {
+  padding: 10px;
+}
+.list-card-body-custom {
+  padding: 20px
 }
 
 .register-card-body {
