--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,8 @@
 
               <form th:action="@{/addUser}"
                     th:object="${newUser}"
-                    method="post">
+                    method="post"
+                    enctype="multipart/form-data">
                 <div class="row mb-3">
                   <label class="col-sm-2 col-form-label">Username</label>
                   <div class="col-sm-10">
@@ -97,7 +98,7 @@
                     <input type="date"
                            id="birthDate"
                            class="form-control"
-                           th:name="birthDate">
+                           th:field="*{birthDate}">
                   </div>
                 </div>
 
@@ -109,7 +110,7 @@
                     <input type="date"
                            id="joiningDate"
                            class="form-control"
-                           th:name="joiningDate">
+                           th:field="*{joiningDate}">
                   </div>
                 </div>
                 <!-- Gender -->
@@ -419,7 +420,7 @@
     <i class="bi bi-arrow-up-short"></i>
   </a>
   <div th:replace="~{scripts}"></div>
-  <script th:src="@{/js/AddressResolver.js}"></script>
+  <script th:src="@{/js/addressResolver.js}"></script>
 
 </body>
 
