--- a/src/main/resources/templates/designation_modal.html
+++ b/src/main/resources/templates/designation_modal.html
@@ -1,69 +1,4 @@
 <!--  Designation details Modal -->
-<div th:fragment="modalContent(designation)">
-  <div class="col-lg-6 modal fade"
-       id="designationDetails"
-       role="dialog">
-    <div class="card modal-dialog">
-      <div class="card-body">
-        <h5 class="card-title">Add Designation Information</h5>
+<!--<div th:fragment="modalContent(designation)">-->
 
-        <form action="#"
-              th:action="@{/designation}"
-              th:object="${designation}"
-              method="post">
-          <div class="row">
-            <div class="col-sm-10">
-              <div class="form-floating mb-3">
-                <input class="form-control" id="title"
-                       th:field="*{title}"/>
-                <span th:if="${#fields.hasErrors('title')}"
-                      th:errors="${designation.title}"
-                      class="error"></span>
-                <label for="title">Title</label>
-              </div>
-              <div class="form-floating mb-3">
-                        <textarea class="form-control"
-                                  id="description"
-                                  placeholder="Insert Job Description"
-                                  style="height: 100px;"
-                                  th:field="${designation.jobDescription}">
-
-                        </textarea>
-                <span th:if="${#fields.hasErrors('jobDescription')}"
-                      th:errors="*{jobDescription}"
-                      class="error"></span>
-                <label for="description">Job Description</label>
-              </div>
-
-              <!--Salary Range-->
-              <div class="row">
-                <div class="col-sm-10">
-                  <label class="form-label">Salary Range</label>
-                </div>
-                <div class="col-sm-2">
-                  <label id="currentSalary"
-                         class="form-label"></label>
-                </div>
-              </div>
-              <input type="range"
-                     class="form-range"
-                     id="salaryRange"
-                     th:field="*{salaryRange}"
-                     min="0"
-                     max="100">
-            </div>
-          </div>
-
-          <div class="row mb-3">
-            <div class="col-sm-10">
-              <button type="submit"
-                      class="btn btn-close"
-                      data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </form>
-
-      </div>
-    </div>
-  </div>
 </div>
