--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -1,4 +1,5 @@
 <!-- Vendor JS Files -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script th:src="@{/vendor/apexcharts/apexcharts.min.js}"></script>
 <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <script th:src="@{/vendor/chart.js/chart.umd.js}"></script>
@@ -8,5 +9,6 @@
 <script th:src="@{/vendor/tinymce/tinymce.min.js}"></script>
 <script th:src="@{/vendor/php-email-form/validate.js}"></script>
 
-<!-- Template Main JS File -->
+
+    <!-- Template Main JS File -->
 <script th:src="@{/js/main.js}"></script>
